[package]
name = "tetris-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["default", "dynamic_linking"] }
bevy-inspector-egui = { version = "0.18.3", features = ["highlight_changes", "bevy_pbr"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
